refactor: :recycle: Change NewUser references to StateUser domain name
